k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: go-k8s-app
    labels:
        app: go-k8s-app
spec:
    replicas: 1
    selector:
        matchLabels:
            app: go-k8s-app
    template:
        metadata:
            labels:
                app: go-k8s-app
        spec:
            containers:
            -   name: go-k8s-app
                image: go-k8s-app
                imagePullPolicy: Never
                ports:
                -   containerPort: 8081
