k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: go-k8s-app-service
spec:
    selector:
        app: go-k8s-app
    type: LoadBalancer
    ports:
    -   nodePort: 31234
        port: 8081
        protocol: TCP
        targetPort: 8081
