k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: distributing-tracing-gateway
  namespace: app-deployment 
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: distributing-tracing
  namespace: app-deployment 
spec:
  hosts:
    - "*"
  gateways:
    - distributing-tracing-gateway
  http:
  - match:
    - uri:
        prefix: /hello
    route:
    - destination:
        host: go-k8s-app
        port:
          number: 9090
---
